# coinex-api

./: .env.example  .gitignore  Dockerfile  README.md  backoff.py  client.py  docker-compose.yaml  logger.py  pyproject.toml  requierments.txt  requirements.txt  settings.py  socket_runner.py  trades.py  trades_test.py
