[tool.poetry]
name = "coinex-api"
version = "0.1.0"
description = ""
authors = ["mechnotech <mechnotech@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
certifi = "2021.10.8"
charset-normalizer = "2.0.7"
idna = "3.3"
python-dotenv = "0.15.0"
requests = "2.26.0"
urllib3 = "1.26.7"
backoff = "1.11.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
